feature: adicionado endpoint de seguir usuario
