# openapi.yaml
@@ -184,35 +184,37 @@ paths:
             
             
   
-  /api/users/{userId}/follow:
+  /api/users/{username}/follow:
     post:
       summary: Registra um follow
       description: Registra que o usuario cliente esta seguindo as postagens do usuario que foi passado o userId
       parameters:
-        - name: userId
+        - name: username
           in: path
           required: true
-          description: uuid de um usuario
+          description: username de um usuario
           schema:
             type: string
       security:
         - bearerAuth: []
       responses:
-        '200': 
+        '201': 
           description: Seguido usuário com sucesso
+        '400':
+          description: Usuário já seguido
         '404':
           description: Usuário não encontrado
           
 
-  /api/users/{userId}/unfollow:
+  /api/users/{username}/unfollow:
     post:
       summary: Registra um unfollow
       description: Registra que o usuario cliente parou de seguir as postagens do usuario que foi passado o userId
       parameters:
-        - name: userId
+        - name: username
           in: path
           required: true
-          description: uuid de um usuario
+          description: username de um usuario
           schema:
             type: string
       security:
